fix metadata div height on small landscape screens

--- a/src/html_res/main.css
+++ b/src/html_res/main.css
@@ -271,7 +271,7 @@ div:has(> .plotly-graph-div) {
     filter: opacity(1)
 }
 
-#helpModal{
+#helpModal {
     padding: 10px;
     top: 50%;
     left: 50%;
@@ -287,15 +287,16 @@ div:has(> .plotly-graph-div) {
     font-size: 12pt;
 }
 
-#helpModal.hidden{
+#helpModal.hidden {
     display: none;
 }
 
-#helpModal h1, #helpModal h2{
+#helpModal h1,
+#helpModal h2 {
     text-align: center;
 }
 
-#helpModalCloseBtn{
+#helpModalCloseBtn {
     position: sticky;
     left: 100%;
     top: 0px;
@@ -309,7 +310,7 @@ div:has(> .plotly-graph-div) {
     text-align: center;
 }
 
-#helpModalCloseBtn:hover{
+#helpModalCloseBtn:hover {
     background: red;
 }
 
@@ -388,5 +389,22 @@ div:has(> .plotly-graph-div) {
     body {
         display: flex;
         flex-direction: column;
+    }
+
+    #metadataDivContainer {
+        overflow-y: visible;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        margin-bottom: 80px;
+    }
+
+    .fancyDiv input,
+    .fancyDiv select,
+    .fancyDiv button {
+        padding: 10px;
+    }
+
+    #rightPanel {
+        height: unset;
     }
 }
